force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/Statut_Device_Equipement_Mesure__c.object-meta.xml
<CustomObject>
    <label>Device rattaché à l&apos;équipement de mesure</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Numéro de Statut Device Equipement de Me</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device rattaché à l&apos;équipement de mesure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>