force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/deviceCode_Nielsen__c.field-meta.xml
<CustomField>
    <fullName>deviceCode_Nielsen__c</fullName>
    <label>Code Equipement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CAST</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>CONS</fullName>
            </value>
            <value>
                <fullName>MOBI</fullName>
            </value>
            <value>
                <fullName>OTHE</fullName>
            </value>
            <value>
                <fullName>SMTV</fullName>
            </value>
            <value>
                <fullName>SSTB</fullName>
            </value>
            <value>
                <fullName>TABL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>