force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/displayType_Nielsen__c.field-meta.xml
<CustomField>
    <fullName>displayType_Nielsen__c</fullName>
    <label>Type d&apos;Affichage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Other</fullName>
                <label>Autre</label>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
                <label>Tablette</label>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>