force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/Equipement_de_mesure__c.field-meta.xml
<CustomField>
    <fullName>Equipement_de_mesure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement de mesure</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Device rattaché à l&apos;équipement de mesure</relationshipLabel>
    <relationshipName>Statuts_Device_Equipement_de_Mesure</relationshipName>
    <type>Lookup</type>
</CustomField>