force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/Equipement_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Equipement_du_foyer__c</fullName>
    <label>Équipement du foyer</label>
    <referenceTo>Equipements_du_foyer__c</referenceTo>
    <relationshipName>Statuts_Device_Equipement_de_Mesure</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>