force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/Exclus_de_la_mesure__c.field-meta.xml
<CustomField>
    <fullName>Exclus_de_la_mesure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclus de la mesure</label>
    <type>Checkbox</type>
</CustomField>