force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/ExtID_partenaire__c.field-meta.xml
<CustomField>
    <fullName>ExtID_partenaire__c</fullName>
    <label>Id Device</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>