force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/Mouvant_dans_le_foyer__c.field-meta.xml
<CustomField>
    <fullName>Mouvant_dans_le_foyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mouvant dans le foyer</label>
    <type>Checkbox</type>
</CustomField>