force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/ODID__c.field-meta.xml
<CustomField>
    <fullName>ODID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ODID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>