force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/poste_ExtID_partenaire__c.field-meta.xml
<CustomField>
    <fullName>poste_ExtID_partenaire__c</fullName>
    <label>Site TV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>