force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/Statut_de_mapping__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_mapping__c</fullName>
    <label>Statut de mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Duplicate</fullName>
                <label>Doublon</label>
            </value>
            <value>
                <fullName>Excluded</fullName>
                <label>Exclu</label>
            </value>
            <value>
                <fullName>Mapped</fullName>
                <label>Mappé</label>
            </value>
            <value>
                <fullName>Unmapped</fullName>
                <default>true</default>
                <label>Non mappé</label>
            </value>
            <value>
                <fullName>Unsupported</fullName>
                <label>Non supporté</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>