force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/fields/Utilisateur_principal__c.field-meta.xml
<CustomField>
    <fullName>Utilisateur_principal__c</fullName>
    <formula>Equipement_du_foyer__r.Utilisateur_principal__r.FirstName + &apos; &apos; + Equipement_du_foyer__r.Utilisateur_principal__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilisateur principal</label>
    <type>Text</type>
</CustomField>