force-app/main/default/objects/Statut_Device_Equipement_Mesure__c/validationRules/RV01_Modification_Statut_Mapping.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_Modification_Statut_Mapping</fullName>
    <active>true</active>
    <description>Seul l&apos;utilisateur d&apos;intégration peu modifier le champ statut de mapping</description>
    <errorConditionFormula>AND(
				 !$User.Bypass_validation_rules__c,
				 !$User.Bypass_RDD__c,
				 ISCHANGED(Statut_de_mapping__c),
				 $User.Username != $Label.Mulesoft_integrationUser_username
				)</errorConditionFormula>
    <errorDisplayField>Statut_de_mapping__c</errorDisplayField>
    <errorMessage>Seul l&apos;utilisateur d&apos;intégration peu modifier le champ statut de mapping</errorMessage>
</ValidationRule>